@@ -52,8 +52,8 @@ Last updated February 1, 2000
        `server connect' command (currently only bx-nap has support for
        the opennap commands), specifying the host and port to connect to.
 
-       In bx-nap, you would do:
-       /nadmin connect <server> <port>
+       In BWap, you would do:
+       /admin connect <server> <port>
 
 * Database descriptions
 
